feat: add weather search
